--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <version>2.12.3</version>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.liferay</groupId>
             <artifactId>com.fasterxml.jackson.databind</artifactId>
             <version>2.10.0.LIFERAY-PATCHED-1</version>
