--- a/TourPlannerInJava.DataAccessLayer/pom.xml
+++ b/TourPlannerInJava.DataAccessLayer/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>javafx-base</artifactId>
             <version>16</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
     </dependencies>
 
     <properties>
